--- a/lesson1-crash-course/assets/css/main.css
+++ b/lesson1-crash-course/assets/css/main.css
@@ -1,1 +1,157 @@
-/*# sourceMappingURL=main.css.map */
+:root {
+  --primary-color: rgb(1, 19, 149);
+}
+
+body {
+  background: #F2F2F2;
+  margin: 0;
+  font-family: sans-serif;
+}
+
+.navbar {
+  background: white;
+  padding: 16px;
+}
+.navbar .logo {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 20px;
+  color: var(--primary-color);
+}
+.navbar nav {
+  position: fixed;
+  z-index: 999;
+  width: 50%;
+  top: 0;
+  right: 0;
+  background: #20272E;
+  height: 100vh;
+  padding: 20px;
+}
+.navbar nav ul li {
+  color: white;
+}
+.navbar .container {
+  display: flex;
+  place-content: space-between;
+}
+.navbar .mobile-menu {
+  cursor: pointer;
+}
+
+a {
+  color: #444444;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+section {
+  padding: 80px 32px;
+}
+
+.hero {
+  text-align: center;
+  margin: 0;
+}
+
+.col h1 {
+  text-transform: uppercase;
+  font-size: 35px;
+  line-height: 20px;
+  margin-top: 10px;
+}
+.col p {
+  padding: 20px;
+  margin: 40px;
+}
+
+.primary-cta {
+  background: var(--primary-color);
+  color: white;
+  text-decoration: none;
+  padding: 10px 30px;
+  font-size: 20px;
+  border-radius: 10px;
+  display: inline-block;
+}
+
+.feature-section {
+  background: #20272E;
+  color: white;
+  padding: 40px;
+}
+.feature-section ul {
+  margin: 0;
+  padding-left: 30px;
+  display: grid;
+}
+.feature-section li {
+  font-size: 18px;
+  margin-bottom: 16px;
+  margin-left: 32px;
+  position: relative;
+}
+.feature-section li:before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  left: -32px;
+  background-image: url("../icons/bullet.svg");
+  background-size: contain;
+  margin-right: 8px;
+}
+.feature-section img {
+  display: none;
+}
+
+.testimonial-section {
+  background: var(--primary-color);
+}
+.testimonial-section ul li {
+  color: white;
+  background: #006BD6;
+  text-align: center;
+  padding: 32px 16px;
+  width: 80%;
+  margin: 0 auto 80px auto;
+  border-radius: 8px;
+}
+.testimonial-section ul li img {
+  height: 80px;
+  border: 5px solid rgb(2, 6, 85);
+  border-radius: 50%;
+  margin-top: -70px;
+}
+
+.contact-section h2 {
+  font-size: 32px;
+}
+.contact-section label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+.contact-section input, .contact-section textarea {
+  width: 100%;
+  padding: 8px;
+  border: 1px solid black;
+  font-size: 16px;
+  box-sizing: border-box;
+}
+.contact-section .message-cta {
+  margin: 16px 0 30px 0;
+  background: var(--primary-color);
+  color: white;
+  cursor: pointer;
+}
+
+iframe {
+  width: 100%;
+  height: 300px;
+}/*# sourceMappingURL=main.css.map */
