--- a/lesson 2 Html and css/assets/css/css.css
+++ b/lesson 2 Html and css/assets/css/css.css
@@ -170,3 +170,44 @@ button{
     color: blue;
     text-decoration: underline;
 }
+
+.search{
+    padding: 5px 40px 5px 5px;
+    border: 2px solid gray;
+    border-radius: 5px;
+}
+
+.post img{
+    height: 300px;
+}
+
+.div{
+    display: grid;
+    grid-template-columns: 100px 100px 200px;
+    margin: 20px 0;
+
+}
+
+.div1{
+    padding: 50px;
+}
+
+.div2{
+    display: grid;
+    grid-template-columns: 300px 1fr;
+}
+
+.div3{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 300px 1fr 2fr;
+}
+
+.div4{
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 20px;
+    row-gap: 20px;    
+}
+
