--- a/lesson 2 Html and css/assets/css/css.css
+++ b/lesson 2 Html and css/assets/css/css.css
@@ -6,6 +6,7 @@ body{
 .container{
     margin: 32px;
     align-items: center;
+    padding-bottom: 1000px;
     
     
 }
@@ -211,3 +212,49 @@ button{
     row-gap: 20px;    
 }
 
+
+.div5{
+    display: flex;
+    flex-direction: row;
+}
+
+.div5 .div4{
+    background: pink;
+    width:100px;
+}
+
+.div5 .div3{
+    background: aqua;
+    flex: 1;
+}
+
+.div5 .div5{
+    flex: 2;
+    background-color: black;
+    color: white;
+}
+
+.flex{
+    height: 20px;
+    margin: 30px 0;
+    border: 1px solid gray;
+    display: flex;
+    flex-direction: row;
+}
+
+.flex1{
+    background: aqua;
+    width: 100px;
+}
+
+.flex2{
+    background: black;
+    width: 100px;
+    color: white;
+}
+
+.flex3{
+    background: blue;
+    width: 100px;
+    color: white;
+}
