--- a/lesson 2 Html and css/assets/css/css.css
+++ b/lesson 2 Html and css/assets/css/css.css
@@ -7,6 +7,7 @@ body{
     margin: 32px;
     align-items: center;
     padding-bottom: 1000px;
+    font-family: Arial, Helvetica, sans-serif;
     
     
 }
@@ -288,4 +289,55 @@ button{
     color: white;
     padding: 10px;
 
+}
+
+
+.header{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    border: 2px solid red;
+    padding: 10px 20px;
+    width: 500px;
+    color: white;
+    column-gap: 5px;
+
+
+
+}
+.header p{
+    background: aqua;
+    border-radius: 10px ;
+    padding: 10px  20px;
+    margin: 0;
+
+}
+
+.header h4{
+    color: black;
+    margin: 20px;
+    font-weight: bolder;
+    font-size: larger;
+    text-transform: uppercase;
+    
+
+}
+
+.top{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.middle{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.bottom{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
