--- a/lesson 2 Html and css/nickson.css
+++ b/lesson 2 Html and css/nickson.css
@@ -1,39 +1,160 @@
-h1
-{
-    margin: 0px;
-}
-li{
-    list-style: none;
-    text-decoration: none;
-}
-.container{
-    background-color: gray;
+body{
+    font-family: Arial, Helvetica, sans-serif;
+    margin-top: 100px;
 
 }
+.container{
+    background: rgb(197, 192, 192);
+    background-image: url(20.jpg);
+
+}
+h1,p,li,input{
+    margin: 0;
+}
+
 .nav-bar{
-    color: green;
-    background-color: white;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    vertical-align: center;
+    padding: 30px;
+    background: white;
     text-align: center;
-    padding: 10px;
+    border: none;
+    position: fixed;
+    top: 10px;
+    right: 0;
+    left: 0;
+    height: 55px;
+    
+
 }
-.school-name{
+.left{
+    margin-left: 60px;
+}
+.left h1{
+    color:green;
+    display: flex;
+    justify-content: start;
     font-size: 20px;
-    font-weight: lighter;
+    vertical-align: center;
+    font-size: lighter;
 }
-.campus-name{
-    font-size: 20px;
-    font-weight: bold;
-}
+
 .right ul{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 40px;
+    text-decoration: none;
+    font-size: 20px;
+    margin-right: 60px;
+    list-style: none;
+
+
+}
+.right ul li a{
+    color: green;
+    text-decoration: none;
+
 }
 
-.right ul li
+.form-section
 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.form-section h1{
+    font-weight: lighter;
+    color: rgb(122, 2, 2);
+    margin-bottom: 20px;
+}
+
+.form1 {
+    margin-top: 50px;
+    background: white;
+    padding: 60px;
+}
+
+.form-body{
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
+    justify-content: center;
+    padding: 20px;
+}
+.form-left{
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
+}
+.form-left input{
+    padding: 10px 50px 10px 10px;
+    font-size: normal;
+    background: rgb(182, 219, 231);
+    border: none;
+}
+.form-left span input{
+    color: gray;
+    margin: 0 10px;
+}
+
+.form-left button{
+    background: green;
+    padding: 10px 30px;
+    color: white;
+    border: none;
+    font-size: large;
+}
+
+
+.form-right{
+    width: 280px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 30px;
+    font-size: large;
+}
+.pr1{
     color: green;
+}
+
+.pr1 a{
+    color: green;
+    text-decoration: none;
+}
+.pr2{
+    color: gray;
+}
+
+.form2{
+    margin-top: 30px;
+    margin-bottom: 30px;
+    background: white;
+    padding: 30px 210px 50px 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+}
+.form2 h2{
+    font-weight: normal;
+    color: rgb(122, 2, 2);
+}
+.form2 p{
+    margin: 10px 0;
+    color: gray;
+    font-size: large;
+}
+
+.form2 button{
+    padding: 10px;
+    border: 1px solid black;
+    background: none;
+    color:black;
+    width: 150px;
 }
