--- a/HTML/1_basics/assets/css/css.css
+++ b/HTML/1_basics/assets/css/css.css
@@ -4,24 +4,15 @@ body{
     padding-left: 100px;  
 }
 
-.container{
-
-    margin: 32px;
-    align-items: center;
-    padding-bottom: 1000px;
-    font-family: Arial, Helvetica, sans-serif;
-    
-    
-}
 
 .sidebar{
     position: fixed; /* fixes and element on the window*/    
     color: white;
     background-color: green;
     bottom: 0;
-    left: 0;
+    left: 50px;
     top: 70px;
-    width: 100px;
+    width: 300px;
 
 
 }
