--- a/HTML/Templates/First_website/index.html
+++ b/HTML/Templates/First_website/index.html
@@ -4,32 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css">
+    <!-- bootstrap link -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css">
 
     <title>website 1</title>
 </head>
 <body>
 <!--================navbar container==============================-->
+<nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Logo</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Features</a>
+          </li>
 
-    <div class="navbar">
-        <div class="container">
-            <a href="#" class="logo">Logo</a>
-            <img id="mobile-cta" class="mobile-menu" src="assets/icons/menu.svg" alt="open navigation">
-            <nav>
-                <img id="mobile-exit" class="mobile-menu-exit"  src="assets/icons/exit.svg" alt="close navigation">
-                <!--right navbar and right navbar-->
-                <ul class="left-navbar">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                </ul>
-
-                <ul class="right-navbar">
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Features</a></li>
-                </ul>
-            </nav>
-        </div>
+          
+      </div>
     </div>
+  </nav>
+
+
 
 <!--================ end of navbar container==============================-->
 
@@ -118,7 +129,21 @@
         </div>
     </div>
 </section>
+
+<!-- ==========================end of contact section ==========================-->
+
+
 </body>
     <!--script link-->
     <script src="assets/js/main.js"></script>
+    <!-- JavaScript bootstrap link -->
+<!-- ==========================end of contact section ==========================-->
+
+
+</body>
+    <!--script link-->
+    <script src="assets/js/main.js"></script>
+    <!-- JavaScript bootstrap link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </html>
