html -> fundamentals -> 1_basics

--- a/HTML/1_basics/assets/css/css.css
+++ b/HTML/1_basics/assets/css/css.css
@@ -383,3 +383,9 @@ button{
     align-items: center;
     justify-content: space-between;
 }
+
+table, tbody, tr, td{
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 10px;
+}
